--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a class="nav_link none" href="#">Blog</a>
                     </div>
                     <div class="nav_buttons">
-                        <button class="nav_button">Contact us</button>
+                        <button class="nav_button for_hv">Contact us</button>
                     </div>
                 </div>
 
@@ -40,7 +40,7 @@
                         Design Agency</h1>
                     <p class="main_p">We will provide best web design and business devlopment
                         service clients expectation and satisfaction guarantee.</p>
-                    <button class="main_btn">Free consultation</button>
+                    <button class="main_btn for_hv">Free consultation</button>
                 </div>
                 <div class="main_img"><img src="img/main_img.png" alt=""></div>
             </div>
@@ -153,7 +153,7 @@
                         <h6 class="project_h6">Business Consultant Landing Page</h6>
                     </div>
                 </div>
-                <button class="main_btn btn">View all Projects</button>
+                <button class="main_btn btn for_hv">View all Projects</button>
             </div>
         </div>
     </section>
